--- a/src/styles/HeroSection.css
+++ b/src/styles/HeroSection.css
@@ -230,6 +230,9 @@
     padding: 0.9rem 2rem;
     font-size: 1rem;
   }
+  .hero-title{
+    margin-top: 15%;
+  }
 
   .book-meeting-btn {
     bottom: 2rem;
