--- a/src/styles/HeroSection.css
+++ b/src/styles/HeroSection.css
@@ -10,7 +10,8 @@
   position: relative;
   z-index: 1;
   min-height: 100vh;
-  background: #000000;
+  background: linear-gradient(135deg, #041F1C, #062521);
+color: #E0F2EF;
   opacity: 97%;
   display: flex;
   padding-top: 7%;
