--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -56,9 +56,9 @@
 
 .Dropdown-menu {
   position: absolute;
-  top: 120%;
+  top: 200%;
   left: 0;
-  background-color: rgba(20, 20, 20, 0.95);
+  /* background-color: rgba(20, 20, 20, 0.95); */
   backdrop-filter: blur(15px);
   border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 12px;
