--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,5 @@
 /* small spacing around sections */
-section{padding-top:2rem;padding-bottom:2rem}
+section {
+    padding-top: 2rem;
+    padding-bottom: 2rem
+}
