--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -24,7 +24,6 @@
 .logo-svg {
   width: 100%;
   height: 100%
-  
 }
 
 .nav-links {
@@ -34,7 +33,7 @@
   list-style: none;
   align-items: center;
   margin: 0;
-  padding: 0; 
+  padding: 0;
   text-align: center
 }
 
@@ -84,15 +83,19 @@
   background: var(--primary-cyan)
 }
 
-@media(max-width:968px) {
-
-  .nav-links,
-  .cta-button {
-    display: none
-  }
-
+@media(max-width: 600px) {
   .mobile-menu-toggle {
     display: flex
+  }
+
+  .nav-links {
+    display: none;
+  }
+  .nav-links.active{
+    display: none;
+  }
+  .cta-button {
+    display: none
   }
 
   .nav-links.active {
@@ -106,4 +109,6 @@
     padding: 1rem 5%;
     gap: 1rem
   }
+
+
 }
