--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -24,6 +24,7 @@
 .logo-svg {
   width: 100%;
   height: 100%
+  
 }
 
 .nav-links {
@@ -33,7 +34,7 @@
   list-style: none;
   align-items: center;
   margin: 0;
-  padding: 0;
+  padding: 0; 
   text-align: center
 }
 
@@ -83,19 +84,17 @@
   background: var(--primary-cyan)
 }
 
-@media(max-width: 600px) {
-  .mobile-menu-toggle {
-    display: flex
-  }
-
-  .nav-links {
-    display: none;
-  }
-  .nav-links.active{
-    display: none;
-  }
+@media(max-width:968px) {
+    .navbar{
+      width: 100vw;
+    }
+  .nav-links,
   .cta-button {
     display: none
+  }
+
+  .mobile-menu-toggle {
+    display: flex
   }
 
   .nav-links.active {
@@ -109,6 +108,4 @@
     padding: 1rem 5%;
     gap: 1rem
   }
-
-
 }
