--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -7,12 +7,13 @@
   padding: .5rem 0rem;
   z-index: 1000;
   border-bottom: 1px solid rgba(0, 212, 255, 0.08);
-  transition: all 0.3s
+  transition: all 0.3s;
 }
 
 .navbar.scrolled {
-  padding: .6rem 0;
-  background: rgba(5, 7, 20, 0.98)
+  padding: 0.6rem 0;
+  /* background-color: black !important; */
+  background: linear-gradient(90deg, #00d4ff, #0099cc) !important;
 }
 
 .nav-container {
@@ -24,7 +25,6 @@
 .logo-svg {
   width: 100%;
   height: 100%
-  
 }
 
 .nav-links {
@@ -34,7 +34,7 @@
   list-style: none;
   align-items: center;
   margin: 0;
-  padding: 0; 
+  padding: 0;
   text-align: center
 }
 
@@ -85,9 +85,10 @@
 }
 
 @media(max-width:768px) {
-    .navbar{
-      width: 100vw;
-    }
+  .navbar {
+    width: 100vw;
+  }
+
   .nav-links,
   .cta-button {
     display: none
