--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -68,7 +68,13 @@
   border: none;
   font-weight: 600;
   text-decoration: none;
-  cursor: pointer
+  cursor: pointer;
+  transition: all 0.3s ease; /* smooth animation */;
+  
+}
+.cta-button:hover{
+  transform: translateY(-4px); /* move up */
+  box-shadow: 0 8px 20px rgba(0, 212, 255, 0.4); /* glowing shadow */
 }
 
 .mobile-menu-toggle {
